# SelfCalibPulse

./: README.md
SelfCalibPulse/: CMakeLists.txt  Calib  G4Sim  LookUp  pulsedb
SelfCalibPulse/LookUp/: CrystalPositionLookUpTable
SelfCalibPulse/LookUp/e669/: TrackingFilter.conf
SelfCalibPulse/LookUp/src23/: CrystalPositionLookUpTable
SelfCalibPulse/PSA/: AnaData_LibTrap.cc  Global.hh  Makefile  PSAFilter.cc  PSAFilter.hh  tracefiles
SelfCalibPulse/PSA/psafiles/: CrystalPositionLookUpTable
SelfCalibPulse/PSA/psafiles/macros/: Compton.C  Draw.C  DrawChi2T0.C
SelfCalibPulse/PSA/sbatch/: sarray_psa.job
SelfCalibPulse/PSBase/: note.txt
SelfCalibPulse/PSCfiles/: Chain.C
SelfCalibPulse/PSCfiles/iter/: Chain.C  Draw.C  Draw2D.C  Draw3D.C  DrawDiff.C  DrawPulse.C  DrawPulseDiff2D.C  DrawPulseDiff3D.C  MakeDiffTree.C  MakePulseDiffTree.C
SelfCalibPulse/PSCfiles/iter/it/: Note
SelfCalibPulse/PSCfiles/tmp/: Note
SelfCalibPulse/config/: config.txt  config_ScanPS.txt  config_e669.txt  config_noPS.txt  config_noPS10.txt  config_noPS11.txt  config_noPS22Na.txt  config_noPS60Co.txt  config_noPS60Co_ind.txt  config_noPS88Y.txt  config_noPS88Y_ind.txt  config_src23.txt  config_src23_DS4.txt  config_src23_full.txt  config_src23_sample.txt
SelfCalibPulse/draw/: DrawChi2.C  DrawChi2s.C  DrawHC.C  DrawPSCPulse.C  DrawPulse.C  DrawTrack.C  DrawTrackFOM.C
SelfCalibPulse/macros/: CalcMapPointsGrid.C  MakeMapGrid.C  MakePSBase.C  MakePSBaseChi2.C  MakePSBasePSC.C  MakePSBaseRealPS.C  Makefile  MakefileMap
SelfCalibPulse/others/: Dev.C  Makefile  noise.C  noise0.C  noise2.C  pulse.C  pulse.root  pulseSeg.C  testFFT.C
SelfCalibPulse/sbatch/: scbarray.job  sfitmthr.job  sgparray.job  sgparray1.job  sgparray2.job  sinit.job  sscanps.job
SelfCalibPulse/share/: Note
SelfCalibPulse/src/: AGATA.cc  AGATA.hh  AGATAgeo.cc  AGATAgeo.hh  EventHits.hh  Global.hh  Hit.cc  Hit.hh  HitCollection.cc  HitCollection.hh  PSC.hh  PSbasis.cc  PSbasis.hh  Path.cc  Path.hh  SelfCalib.cc  Tracker.cc  Tracker.hh  TreeReaderPulse.cc  TreeReaderPulse.hh
(+71 files in other folders)
